# spideroak-core

./: Cargo.toml  Makefile.toml  README.md  cargo-watch  clippy.toml  deny.toml
.github/: CODEOWNERS
canaries/canary-alloc/: Cargo.toml
canaries/canary-alloc/src/: main.rs
canaries/canary-std/: Cargo.toml
canaries/canary-std/src/: main.rs
crates/base58/: Cargo.toml
crates/base58/benches/: lib.rs
crates/base58/src/: base58.rs  lib.rs
crates/buggy/: Cargo.toml  LICENSE
crates/buggy/src/: lib.rs
supply-chain/: README.md  config.toml
