[package]
name = "canary-alloc"
publish = false
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
rust-version.workspace = true

[dependencies]
buggy = { path = "../../crates/buggy", features = ["alloc"] }
spideroak-base58 = { path = "../../crates/base58", features = ["alloc"] }
