[package]
name = "spideroak-base58"
description = "Base58 encoding and decoding"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = []
# Enable alloc
alloc = ["buggy/alloc"]
# Enable std
std = ["alloc", "buggy/std"]


[dependencies]
buggy = { version = "0.1.0", path = "../buggy" }


[dev-dependencies]
criterion = { version = "0.6", default-features = false }
flate2 = { version = "1" }
hex = { version = "0.4" }
rand = { version = "0.8", default-features = false, features = ["std_rng", "getrandom"] }
serde = { version = "1" }
serde_derive = { version = "1" }
serde_json = { version = "1" }


[[bench]]
name = "lib"
harness = false


[package.metadata.docs.rs]
all-features = true


[package.metadata.cargo-all-features]
always_include_features = []

skip_feature_sets = [
	["std", "alloc"],
]

denylist = []
