[package]
name = "buggy"
description = "A less panicky replacement for unreachable!() and unwrap"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

alloc = []
std = ["alloc"]

[dependencies]
cfg-if = { workspace = true }
